Continution for 4th Assignment(commit 5th Assignmnet)

--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -7,17 +7,22 @@
 
 @using (Html.BeginForm("CreateAccount", "Home"))
 {
-    <p>
-        Account Number: @Html.TextBoxFor(a => a.AccountNumber)
-    </p>
+   
+    @Html.ValidationSummary("Errors in account creation")
+<p>
+    Account Number: @Html.TextBoxFor(a => a.AccountNumber)
+    @Html.ValidationMessageFor(a => a.AccountNumber)
+</p>
 
-    <p>
-        Name: @Html.TextBoxFor(a => a.Name)
-    </p>
+<p>
+    Name: @Html.TextBoxFor(a => a.Name)
+    @Html.ValidationMessageFor(a => a.Name)
+</p>
 
-    <p>
-        Current Balance: @Html.TextBoxFor(a => a.CurrentBalance)
-    </p>
+<p>
+    Current Balance: @Html.TextBoxFor(a => a.CurrentBalance)
+    @Html.ValidationMessageFor(a => a.CurrentBalance)
+</p>
 
     <input type="submit" value="Create Account" />
 }
